--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.4",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.collab-proxy": "1.17.6",
+    "com.unity.feature.vr": "1.0.0",
+    "com.unity.ide.rider": "3.0.16",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.nuget.newtonsoft-json": "3.0.1",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
-    "jillejr.newtonsoft.json-for-unity": "13.0.102",
+    "com.unity.xr.interaction.toolkit": "2.0.4",
+    "com.unity.xr.management": "4.3.1",
+    "com.unity.xr.openxr": "1.5.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -41,13 +45,5 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "scopedRegistries": [
-    {
-      "name": "jilleJr",
-      "url": "https://npm.cloudsmith.io/jillejr/newtonsoft-json-for-unity",
-      "scopes": [
-        "jillejr.newtonsoft.json-for-unity"
-      ]
-    }
-  ]
+  "scopedRegistries": []
 }
